--- a/rtc-h5/package.json
+++ b/rtc-h5/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "build": "webpack --mode=production --config webpack.config.js",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development --open"
+    "dev": "webpack-dev-server --mode=development"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
